--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "JIN Yiyao"
-  avatar           : "images/android-chrome-512x512.png"
+  avatar           : "images/life_pic1.jpg"
   bio              : # "Lorem ipsum College"
   location         : "Hong Kong SAR, China"
   employer         :
