--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 title                    : "JIN Yiyao"
 description              : "Third-year Data Science undergraduate student at CityU HK"
-repository               : "RayeRen/acad-homepage.github.io"
+repository               : "Fiona1224/Fiona1224.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
@@ -23,12 +23,12 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "JIN Yiyao"
   avatar           : "images/life_pic1.jpg"
-  bio              : # "Lorem ipsum College"
+  bio              : 
   location         : "Hong Kong SAR, China"
   employer         :
   pubmed           : 
   googlescholar    : # "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
-  email            : "Lorem@ipsum.com"
+  email            : "yiyao.jin@my.cityu.edu.hk"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
