--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "JIN Yiyao"
-description              : "Third-year Data Science undergraduate student at CityU HK"
+description              : "Fourth-year Data Science undergraduate student at CityU HK"
 repository               : "Fiona1224/Fiona1224.github.io"
 google_scholar_stats_use_cdn : true
 
